apps/team1-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team1-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: team1-app
  template:
    metadata:
      labels:
        app: team1-app
    spec:
      containers:
        - name: team1-app
          image: 495599735720.dkr.ecr.ap-northeast-2.amazonaws.com/team1-app:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
