apps/team1-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: team1-app
  labels:
    app.kubernetes.io/name: team1-app
spec:
  type: ClusterIP
  selector:
    app: team1-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: management
      port: 8081
      targetPort: 8081
