apps/team1-app/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: team1-app-route
  namespace: default # 네임스페이스 지정
spec:
  parentRefs:
    - name: dev-gateway   # Gateway 리소스 이름 지정
      namespace: default
  hostnames:
    - "team1.dev.course-registration.com" # dev 도메인 주소 지정
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: team1-app
          port: 8080
